--- a/ProjectPortfolio/Views/Home/Index.cshtml
+++ b/ProjectPortfolio/Views/Home/Index.cshtml
@@ -188,7 +188,7 @@
                 </div>  
             </div>  
        </div>
-	    <!--04 Portfolio Entry - Commercial Project (Kinesense Ltd) -->
+	   <!--04 Portfolio Entry - Commercial Project (Kinesense Ltd) -->
 	   <div class="portfolio_entry">
             <hr/>   
             <p>
@@ -231,7 +231,7 @@
                 </div>  
             </div>  
        </div>
-		<!--05 Portfolio Entry - Project Personal Details (Java Swing) -->
+	   <!--05 Portfolio Entry - Project Personal Details (Java Swing) -->
        <div class="portfolio_entry">
             <hr/>   
             <p>
@@ -264,12 +264,177 @@
                 <p>Project Demonstration:</p>   
                 <p>Restricted - Unavailable</p>
                 <div class="entry_urls">
-                    <p>Github Repository: <a href="https://github.com/johnmlhll/JavaSwingGUI-ProjectPersonalDetails">Project Personal Details</a></p>
-                    <p>Commerical Site - Hyperlink: Restricted - Unavailable</p>
+                    <p>Github Repository: <a href="https://github.com/johnmlhll/JavaSwingGUI-ProjectPersonalDetails" target="_blank">Project Personal Details</a></p>
+                    <p>Live Site - Hyperlink: Restricted - Unavailable</p>
                 </div>  
             </div>  
        </div>
-		
+	   <!--06 Portfolio Entry - Project Safe Haven (Java Android) -->
+       <div class="portfolio_entry">
+            <hr/>   
+            <p>
+                <strong>Project Name:</strong> Safe Haven
+                <span class="project_right">Publication Date: April 2017</span>
+            </p>
+            <a class="btn_expand">Show More/Less</a>
+            <div class="portfolio_entry_detail">    
+                <p>Languages:</p>   
+                <a class="portfolio_images">
+                    <img src="~/Images/imgLogoJava8.png" alt="Image of Java 8 Logo"/>  
+					<img src="~/Images/imgLogoAndroid.png" alt="Image of Android Logo"/>
+                </a>    
+                <p>Frameworks/Storage:</p>
+                 <a class="portfolio_images">
+                    <img src="~/Images/imgLogoFirebase.jpg" alt="Image of Firebase Backend As A Service Logo"/>  
+                </a>    
+                <p>Deployment:</p>
+                <a class="portfolio_images">
+                    <img src="~/Images/imgLogoDesktop.png" alt="Image of Fat Client - Desktop Logo"/>
+                </a>    
+                <p>Project Trailer:</p>  
+                <p>Restricted - Unavailable</p>
+                <p>Project Description:</p> 
+                <p>
+                    This project is a Android project that inputs refugee information on a handheld (basic in v1.0) as part of the 
+					registration process and when saved uploads to Google Firebase, which is a Backend as a Service (BaaS). The 
+                    .json string is in this v1.0 version is the basic personal details of the refugee that is inputted onto Firebase
+					via upload from the Android device. It is searchable in a developed system by anybody globally with authorised
+					access to the Firebase instance the details are stored on. The application also has a check function which
+					uses Google maps based on the users location with a pan function to check an address on site once there is access
+					to the internet. If no internet access, the registration can be stored locally on the device before it is "saved" 
+					to Firebase completing the registration. Data in this V1.0 is one way to Firebase, no retrieve, delete or edit 
+					functionality is implemented in this V1.0 minimum viable product. A v2.0 of Safe Haven would see those features 
+					implemented along other functional (e.g. auto check address without having to pan) and non functional features 
+					(e.g. encryption for local handset data storage). 
+                </p>
+                <p>Project Demonstration:</p>   
+                <p>Restricted - Unavailable</p>
+                <div class="entry_urls">
+                    <p>Github Repository: <a href="https://github.com/johnmlhll/Android-ProjectSafeHaven" target="_blank">Project Safe Haven</a></p>
+                    <p>Live Site - Hyperlink: Restricted - Unavailable</p>
+                </div>  
+            </div>  
+       </div>
+	   <!--07 Portfolio Entry - Project DBS (.NET WinForms) -->
+       <div class="portfolio_entry">
+            <hr/>   
+            <p>
+                <strong>Project Name:</strong> Winforms Project DBS
+                <span class="project_right">Publication Date: April 2017</span>
+            </p>
+            <a class="btn_expand">Show More/Less</a>
+            <div class="portfolio_entry_detail">    
+                <p>Languages:</p>   
+                <a class="portfolio_images">
+                    <img src="~/Images/imgLogoCSharpVS.jpg" alt="Image of C SHarp and Visual Studio Logos"/>  
+                </a>    
+                <p>Frameworks/Storage:</p>
+                 <a class="portfolio_images">
+                    <img src="~/Images/imgLogoMicrosoftSQLServer.png" alt="Image of Firebase Backend As A Service Logo"/>  
+					<img src="~/Images/imgLogoDotNet.png" alt="Image of Microsoft .Net Logo"/>
+                </a>    
+                <p>Deployment:</p>
+                <a class="portfolio_images">
+                    <img src="~/Images/imgLogoDesktop.png" alt="Image of Fat Client - Desktop Logo"/>
+                </a>    
+                <p>Project Trailer:</p>  
+                <p>Restricted - Unavailable</p>
+                <p>Project Description:</p> 
+                <p>
+                    This project has a 3 tier architecture designed to meet the project requirements of a college project which was to 
+					design and build an extensible minimum viable product for a student records management system via Winforms, .Net 
+					and SQL Server. The project has a gridview to see listed students, a new student, edit student and delete student
+					features, which are fully interactive with the SQL Server instance running stored procedures from the application 
+					layer in order to conduct database operations. Database was designed and implemented to run in the 3rd normal form 
+					and the fat client application is desktop deployable only.
+                </p>
+                <p>Project Demonstration:</p>   
+                <p>Restricted - Unavailable</p>
+                <div class="entry_urls">
+                    <p>Github Repository: <a href="https://github.com/johnmlhll/WinformsCSharp-ProjectDBS" target="_blank">Winforms Project DBS</a></p>
+                    <p>Live Site - Hyperlink: Restricted - Unavailable</p>
+                </div>  
+            </div>  
+       </div>
+	   <!--08 Portfolio Entry - Project B and B -->
+       <div class="portfolio_entry">
+            <hr/>   
+            <p>
+                <strong>Project Name:</strong> Project B and B
+                <span class="project_right">Publication Date: March 2017</span>
+            </p>
+            <a class="btn_expand">Show More/Less</a>
+            <div class="portfolio_entry_detail">    
+                <p>Languages:</p>   
+                <a class="portfolio_images">
+                    <img src="~/Images/imgLogoHtml5Css3Js.png" alt="Image of HTML5, CSS3 and JavaScript Logos"/>
+                </a>    
+                <p>Frameworks/Storage:</p>
+                 <a class="portfolio_images">
+                    None
+                </a>    
+                <p>Deployment:</p>
+                <a class="portfolio_images">
+                    <img src="~/Images/imgLogoGithubPages.png" alt="Image of Github Pages Logo"/>
+                </a>    
+                <p>Project Trailer:</p>  
+                <p>Restricted - Unavailable</p>
+                <p>Project Description:</p> 
+                <p>
+                    This project has a front end only website, which was a college project to demonstrate web design ability. The
+					project specs were for a fictitious B and B called "Moores B&B" who commissioned a brochure style web design
+					for their flagship website. The pages include About Us, Our Customers, Activities, Rooms, Bookings, Useful Links, 
+					Contact Us (including online form) and a site map in addition to the Home page. No frameworks whatsoever were
+					allowed for this project such as Angular, Ajax or even Bootstrap. The idea was to demonstrate web design talent
+					and development skills using HTML5, CSS3 and Javascript to a lessor extent. It was in essense a design and style
+					project.
+                </p>
+                <p>Project Demonstration:</p>   
+                <p>Restricted - Unavailable</p>
+                <div class="entry_urls">
+                    <p>Github Repository: <a href="https://github.com/johnmlhll/HTMLCSSJSWeb-ProjectBandB" target="_blank">Project B and B</a></p>
+                    <p>Live Site - Hyperlink: <a href="https://johnmlhll.github.io/HTMLCSSJSWeb-ProjectBandB/index.html" target="_blank">Moores B&B</a></p>
+                </div>  
+            </div>  
+       </div>
+	   <!--09 Portfolio Entry - Project Linux Bash Admin -->
+       <div class="portfolio_entry">
+            <hr/>   
+            <p>
+                <strong>Project Name:</strong> Linux Admin
+                <span class="project_right">Publication Date: March 2017</span>
+            </p>
+            <a class="btn_expand">Show More/Less</a>
+            <div class="portfolio_entry_detail">    
+                <p>Languages:</p>   
+                <a class="portfolio_images">
+                    <img src="~/Images/imgLogoBash.png" alt="Image of the Bash Logo"/>
+                </a>    
+                <p>Frameworks/Storage:</p>
+                 <a class="portfolio_images">
+                    None
+                </a>    
+                <p>Deployment:</p>
+                <a class="portfolio_images">
+                    <img src="~/Images/imgLogoLinux.png" alt="Image of Linux Penguin Logo"/>
+                </a>    
+                <p>Project Trailer:</p>  
+                <p>Restricted - Unavailable</p>
+                <p>Project Description:</p> 
+                <p>
+                    This college project was a pure bash scripting project interrogating the Linux File Structure. 
+					The basic idea of the admin script was to take results by block and then return the results by student with comments 
+					producing a new folder structure to store the results by student number. No other languages like AWK or Python 
+					were allowed.
+                </p>
+                <p>Project Demonstration:</p>   
+                <p>Restricted - Unavailable</p>
+                <div class="entry_urls">
+                    <p>Github Repository: <a href="https://github.com/johnmlhll/Bash-ProjectLinuxAdmin" target="_blank">Project Linux Admin</a></p>
+                    <p>Live Site - Hyperlink: Restricted - Unavailable</p>
+                </div>  
+            </div>  
+       </div>
     </article>		
 </div>
 
