--- a/ProjectPortfolio/Views/Shared/_Layout.cshtml
+++ b/ProjectPortfolio/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 	<!--CSS/JS Files-->	
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="~/Scripts/JSSFile.js" type="text/javascript"></script>
-	<link rel="stylesheet" type="text/css" href="~/Content/Style.css"/>    	
+	<link rel="stylesheet" type="text/css" href="~/Content/Style.css"/>   
 </head>
 <body>		
     <div id="wrapper">  
@@ -59,6 +59,9 @@
 		</main>
 		<!--Footer-->
 		<footer>
+			<span id="back_to_top" onclick="scrollUp()">
+                <img src="~/Images/imgBackToTop.png" alt="Back to top arrow image"/>
+            </span> 	
 			<hr>
 			<!--Left hand side of footer-->
 		    <a id="logo"><img src="~/Images/imgMulhallFamilyCrest.png" alt="Image of the Mulhall Family Crest"/></a>
