--- a/ProjectPortfolio/Views/Home/Index.cshtml
+++ b/ProjectPortfolio/Views/Home/Index.cshtml
@@ -53,7 +53,7 @@
 			Selected projects completed on the course along with those of note completed in my spare time; both then and since make up the 
 			bulk of my software portfolio. Please note certain Projects on my Github profile that predate the portfolio start date of 
 			September 2016 will not be included in my software portfolio. I have implemented a JavaScript toggle function to make
-			purusal of my software portfolio more user friendly, so just click on any of the "Show More/Less" buttons under the 
+			perusal of my software portfolio more user friendly, so just click on any of the "Show More/Less" buttons under the 
 			project entries to see the details associated with the entry.
 		</p>
         <!--Portfolio Entry 01 - Project Portfolio-->
@@ -193,7 +193,7 @@
             <hr/>   
             <p>
                 <strong>Project Name:</strong> Image Analysis Framework (Commercial)
-                <span class="project_right">Restricted Publication Date: June 2017</span>
+                <span class="project_right">Publication Date: June 2017</span>
             </p>
             <a class="btn_expand">Show More/Less</a>
             <div class="portfolio_entry_detail">    
