--- a/ProjectPortfolio/Views/About/Index.cshtml
+++ b/ProjectPortfolio/Views/About/Index.cshtml
@@ -3,7 +3,80 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>About John</h2>
+<div id="about_wrapper">
+    <h2>About John</h2>
+    <p>
+        This page is about my general background to date covering three careers. A more detailed review of my work history is available on
+    	my @Html.ActionLink("Resume","Index","Resume") page. If you wish to know more detail about me and my career plans, please reach out 
+    	on @Html.ActionLink("Contact Me","Index","Contact") page and I will be happy to supply my Curriculum Vitae with any answers to
+        your questions.
+    </p>
+    <h3>Through The Years</h3>
+    <p>
+        A native of Dublin Ireland, my early days were spent in Dublin with summers at my mother's home farm in Co Cavan, where I learned
+    	about a good work ethic, healthy living and Ireland's living history. After secondary school and a few years of private security, 
+        I joined the <a href="http://www.military.ie/home/" target="_blank">Irish Defence Forces</a>, 
+		where my developing work ethic and interest saw me been transformed into a more desciplined and focused version of myself.
+    </p>
+    <p>
+        My interest in writing and aptitude for <i>numbers</i> saw me guided into Financial Operations after the Military where I qualified
+    	as a banker with the Certificate in Financial Services from <a href="https://www.iob.ie/?q=NODE/1198" target="_blank">
+    	University College Dublin</a> and the <a href="https://www.iob.ie/?q=NODE/1198" target="_blank">Institute of Banking</a>. With my
+    	ongoing interest in technology and project management, I gained good systems project experience in the 12 years of leadership 
+    	in Financial Operations to 2012 when my redundancy from Integra Lifesciences sparked a revival of what I hold dear bringing me back
+    	to Software and watching Dublin win the the All Ireland GAA Finals. Hopefully I won't have to edit this portion of my site for some
+    	time to come!!
+    </p>
+    <div id="dbs_john">
+        <a href="https://about.me/jmulhall" target="_blank">
+        	<img src="~/Images/imgCoderJohn.jpg" alt="Image of John Coding at Dublin Business School, Dublin, Ireland"/>
+        </a>
+    </div>
+    <p>
+        After reflecting on my deep passion for <a href="http://www.leadershipgeeks.com/leadership-traits/" target="_blank">
+    	consultative</a> leadership and <a href="https://www.artsfwd.org/4-types-org-culture/" target="_blank">clan-adhocracy company 
+    	culture</a>, I started to plan my future in terms of pursuit of happiness and passion for the work I do. This brought me down 
+		a planned road where milestones were complimented by self discovery and contentment on the journey that I chosen to make to 
+		Software. My journey to become a Software Developer is indeed a continious one and its start is marked by the following 
+		milestones:
+    </p>
+    <ul>
+        <li><strong>2013-2014:</strong> Certificate in Advanced Project Management for the ICT Professional (QQI Level 8)</li>
+    	<li><strong>2014-2015:</strong> Certificate in Software and Cloud Technology (QQI Level 8)</li>
+    	<li><strong>2015-2016:</strong> Internship in Big Data Analysis and Marketing at Sonra Intelligence Ltd</li>
+        <li><strong>2016-2017:</strong> Higher Diploma in Science in Computing(Software Development) (QQI Level 8)</li>
+    </ul>
+    <p>
+        The Level 8 (Hons Degree Strem) <a href="http://www.qqi.ie/Articles/Pages/National-Framework-of-Qualifications-(NFQ).aspx" target="_blank">
+		QQI</a> awards were the result of my Study from 2013 at DBS where I acheived 1st class honours in all 3rd level qualifications 
+		acheived!
+    </p>
 
-<a><img src="~/Images/imgCoderJohn.jpg" alt="Image of John Coding at Dublin Business School, Dublin, Ireland"/></a>
-
+    <h3>Interests</h3>
+    <p>
+        As you can see, my <strong>number one</strong> interest is Software Development. It's a true passion for sure, which is why I spend a huge amount of 
+    	my time coding and working on my Mac (a.k.a. Debs)! My interests ebb and flow over time making their ranking (outside of 
+    	Software Development) difficult, I would say that my interests are
+    	the following:
+    </p>
+    <ul>
+        <li>GAA</li>
+    	<li>Software Development</li>
+    	<li>Writing</li>
+    	<li>Bloggin</li>
+    	<li>Cinema</li>
+    	<li>Social Media</li>
+        <li>Socialising</li>
+    	<li>Open Source</li>
+    	<li>Technology</li>
+    	<li>Arts</li>
+    	<li>TV</li>
+    	<li>Current Affairs</li>
+    	<li>Environment</li>
+    	<li>Sustainable Capitalism</li>
+    </ul>
+    <p>
+        As there is not enough hours in the day, one has to prioritise but noteworthy is my passion for the above making quality experiences 
+    	and insight an important of my journey as an enthusiast and a continious life long learner.
+    </p>
+</div>
