22nd Commit - Started Developing About John View

--- a/ProjectPortfolio/Content/Style.css
+++ b/ProjectPortfolio/Content/Style.css
@@ -358,7 +358,7 @@ footer hr {
     display: block;
 }
 
-/*About John - View Styling*/
+/*About John - View Styling Unrestricted*/
 #dbs_john {
     margin: 1%;
 }
