--- a/ProjectPortfolio/Views/About/Index.cshtml
+++ b/ProjectPortfolio/Views/About/Index.cshtml
@@ -63,7 +63,7 @@
         <li>GAA</li>
     	<li>Software Development</li>
     	<li>Writing</li>
-    	<li>Bloggin</li>
+    	<li>Blogging</li>
     	<li>Cinema</li>
     	<li>Social Media</li>
         <li>Socialising</li>
