--- a/ProjectPortfolio/Views/Shared/_Layout.cshtml
+++ b/ProjectPortfolio/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <!--Favicon-->
     <link rel="shortcut icon" href="~/Images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="~/Images/favicon.ico" type="image/x-icon">   
-	<!--CSS/JS Files-->	
+	<!--CSS/Javascript Files-->	
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="~/Scripts/JSSFile.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="~/Content/Style.css"/>   
