--- a/ProjectPortfolio/Views/Resume/Index.cshtml
+++ b/ProjectPortfolio/Views/Resume/Index.cshtml
@@ -2,6 +2,30 @@
     ViewBag.Title = "Resume";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Resume</h2>
+<div id="resume_wrapper">
+    <h2>Resume</h2>
+	<p>
+	    Name: John Mulhall <span class="project_right">Title: Software Developer | Software Engineer</span>
+	</p>
+	<!--Skills Section-->
+	<a class="btn_expand">Technical Skills Analysis (2017) | Click for More/Less</a>
+	<div class="portfolio_entry_detail">
+		<p><strong>Top Skills</strong></p>
+		<p>
+		    C# | HTML5 | CSS3 | ASP.NET | Razor | MVC | Object Orientated Programming | Application Design | SQL | SQL Server | PostgreSQL
+		</p>
+		<p><strong>Enterprise Ready/Medium Skills</strong></p>
+		<p>
+			Java | Javascript | MySQL | Bash Scripting | Database Design and Development | Swing | Android | AngularJS (4) | Android |
+			Server Side Programming | Algorithms | Swing | Social Media | Web Forms | Winforms | N Tier Architecture | Data Analysis |
+			Python | Pandas | Plotly
+		</p>
+        <p><strong>Near Enterprise Ready/Lower Skills</strong></p>
+		<p>
+             NodeJS | ExpressJS | Java Spring | Hibernate | Image/Video Editing | CMS | Hadoop | DSS Machine Learning Platform
+		</p>
+	</div>
+	<hr class="hr_class">		
+	
+</div>
 
