--- a/ProjectPortfolio/Views/Resume/Index.cshtml
+++ b/ProjectPortfolio/Views/Resume/Index.cshtml
@@ -5,14 +5,36 @@
 <div id="resume_wrapper">
     <h2>Resume</h2>
 	<p>
-	    Name: John Mulhall <span class="project_right">Title: Software Developer | Software Engineer</span>
+	    Name: <i>John Mulhall</i> <span class="project_right">Title: <i>Software Developer | Software Engineer</i></span>
 	</p>
+	<div id="language_slideshow">
+        <img id="slideshow_csharp" src="imgLogoCSharpVS.jpg"/>
+        <img id="slideshow_bash" src="imgLogoBash.png"/>
+        <img id="slideshow_xml" src="imgLogoXML.png"/>
+        <img id="slideshow_android" src="imgLogoAndroid.png"/>
+        <img id="slideshow_python" src="imgLogoPython.png"/>
+	</div>
+	<div id="profile">
+		<h3>Profile</h3>
+        <ul>
+			<li>Proficient in OOP programming on .Net and Java stacks</li>
+			<li>Proficient in database design and development on (relational) SQLServer, MySQL, PostgreSQL | NoSQL on XML, MongoDB</li>
+			<li>1st class honours in Science in Computing (Software Development) Associates Degree at 78% (2017)</li>
+			<li>Industry certified in Microsoft technology (MTA from 2015) and Java technology (OCA from 2017)</li>
+			<li>Involved in open source community and was Community Manager for Hadoop User Group Ireland for 15 months</li>
+			<li>Writer for Irish Tech News on technology and business</li>
+			<li>Former process management professional with 15 years commerical experience covering 5 industry domains</li>
+			<li>Transferrable industry experience/training in Lifesciences, Food, Freight & Logistics, Financial Services and Information Technology</li>
+		</ul>
+		<hr class="hr_class"> 
+	</div>
 	<!--Skills Section-->
 	<a class="btn_expand">Technical Skills Analysis (2017) | Click for More/Less</a>
 	<div class="portfolio_entry_detail">
 		<p><strong>Top Skills</strong></p>
 		<p>
-		    C# | HTML5 | CSS3 | ASP.NET | Razor | MVC | Object Orientated Programming | Application Design | SQL | SQL Server | PostgreSQL
+		    C# | HTML5 | CSS3 | ASP.NET | Razor | MVC | Object Orientated Programming | Application Design | SQL | SQL Server | PostgreSQL |
+			Web Development
 		</p>
 		<p><strong>Enterprise Ready/Medium Skills</strong></p>
 		<p>
@@ -26,6 +48,87 @@
 		</p>
 	</div>
 	<hr class="hr_class">		
-	
+	<!--Education Section-->
+    <a class="btn_expand">Education & Qualification Analysis (2017) | Click for More/Less</a>
+    <div class="portfolio_entry_detail">
+        <p><strong>Top Educational Acheivement</strong></p>
+        <p>
+            2017 - Higher Diploma in Science in Computing(Software Development)
+			<span class="project_right">Result: 1st Class Honours (78%)</span> 
+		</p>
+        <p><strong>3rd Level - Higher Education</strong></p>
+        <p>
+			QQI Level 8: 2017 - Higher Diploma in Science in Computing(Software Development) 
+			at Dublin Business School (a.k.a Associates Degree, Conversion Degree)
+            <span class="project_right">Result: 1st Class Honours</span> 
+        </p>
+		<p>
+            QQI Level 8: 2015 - Higher Certificate in Software and Cloud Technology
+            at Dublin Business School 
+            <span class="project_right">Result: 1st Class Honours</span> 
+        </p>
+		<p>
+            QQI Level 8: 2014 - Higher Certificate in Advanced Project Management for the ICT  
+            Professional at Dublin Business School 
+            <span class="project_right">Result: 1st Class Honours</span> 
+        </p>
+		<p>
+            QQI Level 7: 1997 - Certificate in Financial Services at Institute of Banking and 
+			University College Dublin
+            <span class="project_right">Result: Pass</span> 
+        </p>
+        <p><strong>Industry Certification and Training</strong></p>
+		<p>
+             07/2017 IKM - Software Quality Assurance Testing by IKM International for Harvey Nash plc 
+            <span class="project_right">Result: 83% - Pass</span>
+        </p>
+        <p>
+             06/2017 MTA - 98-375 HTML App Development Fundamentals at Dublin Business School
+			<span class="project_right">Result: 88% - Pass</span>
+        </p>
+		<p>
+             06/2017 OCA - IZ0-811 Java Foundations - Certified Junior Asscociate at Cenit College
+            <span class="project_right">Result: 71% - Pass</span>
+        </p>
+		<p>
+             05/2017 MTA - 98-366 Networking Fundamentals at Dublin Business School
+            <span class="project_right">Result: 72% - Pass</span>
+        </p>
+		<p>
+             04/2017 MTA - 98-364 Database Fundamentals at Dublin Business School
+            <span class="project_right">Result: 90% - Pass</span>
+        </p>
+		<p>
+             07/2016 MongoDB - M101JS MongoDB for Node.js Developers at MongoDB University
+            <span class="project_right">Result: 89% - Pass</span>
+        </p>
+		<p>
+             05/2015 MTA - 98-366 Web Development Fundamentals at Cenit College
+            <span class="project_right">Result: 77% - Pass</span>
+        </p>
+		<p>
+             04/2015 MTA - 98-366 Software Development Fundamentals at Dublin Business School
+            <span class="project_right">Result: 77% - Pass</span>
+        </p>
+		<p><strong>Vocational Training</strong></p>
+		<p>
+            1996 - NVEC Certificate in Business Studies
+            <span class="project_right">Result: Distinction</span>
+        </p>
+		<p>
+            1996 - Pitman Certificate in Typewriting at Elementary Grade (25 Words Per Minute)
+            <span class="project_right">Result: First Class</span>
+        </p>
+        <p>
+            1992 - City & Guilds Foundation Certificate in Information Technology
+			<span class="project_right">Result: Pass</span>
+        </p>
+		<p><strong>2nd Level Education</strong></p>
+        <p>
+            1990 - Leaving Certificate from Irish Department of Education at Pobalscoil Rosmini 
+			<span class="project_right">Result: 3 Honours, 5 Passes and 0 Fails</span>
+        </p>
+    </div>
+    <hr class="hr_class">       
 </div>
 
