--- a/ProjectPortfolio/Views/Resume/Index.cshtml
+++ b/ProjectPortfolio/Views/Resume/Index.cshtml
@@ -8,11 +8,11 @@
 	    Name: <i>John Mulhall</i> <span class="project_right">Title: <i>Software Developer | Software Engineer</i></span>
 	</p>
 	<div id="language_slideshow">
-        <img id="slideshow_csharp" src="imgLogoCSharpVS.jpg"/>
-        <img id="slideshow_bash" src="imgLogoBash.png"/>
-        <img id="slideshow_xml" src="imgLogoXML.png"/>
-        <img id="slideshow_android" src="imgLogoAndroid.png"/>
-        <img id="slideshow_python" src="imgLogoPython.png"/>
+        <img id="slideshow_csharp" src="~/Images/imgLogoCSharpVS.jpg"/>
+        <img id="slideshow_bash" src="~/Images/imgLogoBash.png"/>
+        <img id="slideshow_xml" src="~/Images/imgLogoXML.png"/>
+        <img id="slideshow_android" src="~/Images/imgLogoAndroid.png"/>
+        <img id="slideshow_python" src="~/Images/imgLogoPython.png"/>
 	</div>
 	<div id="profile">
 		<h3>Profile</h3>
@@ -49,7 +49,7 @@
 	</div>
 	<hr class="hr_class">		
 	<!--Education Section-->
-    <a class="btn_expand">Education & Qualification Analysis (2017) | Click for More/Less</a>
+    <a class="btn_expand">Education Analysis (2017) | Click for More/Less</a>
     <div class="portfolio_entry_detail">
         <p><strong>Top Educational Acheivement</strong></p>
         <p>
@@ -129,6 +129,38 @@
 			<span class="project_right">Result: 3 Honours, 5 Passes and 0 Fails</span>
         </p>
     </div>
-    <hr class="hr_class">       
+    <hr class="hr_class">   
+	<!--Project Management Section-->
+    <a class="btn_expand">Project Journey and Timeline | Click for More/Less</a>
+    <div class="portfolio_entry_detail">
+		<section class="timeline">
+    	    <ul>
+    			<li>
+					<div>
+                        <p><time><strong>2017</strong></time>
+    					Project: Video Analysis as Software Enginner (Commercial R&D) - I was charged with building 
+    					building an application framework in Java/PostgreSQL on Linux to house the project database and transcode project 
+    					code from Kinesense Ltd's priority algorithm into Java for use on the framework, which was build to be compatible with 
+    					ARM64 processors.</p>
+					</div>
+    			</li>
+				<li>
+					<div>
+                        <p><time><strong>2017</strong></time>
+    					Project: Safe Haven as Student Software Developer (Non Commerical) - An individual project for mobile computing of 
+    					my block 3 course in Android. I developed this application in Android Studio based on the need for handy and time 
+    					efficient registration of those in crises been registered by aid workers using their handheld android devices.
+                        Technology Used was Android Studio version 2.3.3 and Google Firebase.</p>
+					</div>
+				</li>
+    		</ul>	
+	    </section>
+    </div>
+    <hr class="hr_class">   
+	<!--Work Experience Section-->
+    <a class="btn_expand">Work Experience Timeline | Click for More/Less</a>
+    <div class="portfolio_entry_detail">
+    </div>
+    <hr class="hr_class">   
 </div>
 
