--- a/ProjectPortfolio/Views/Shared/_Layout.cshtml
+++ b/ProjectPortfolio/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
 	<!--CSS/Javascript Files-->	
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="~/Scripts/JSSFile.js" type="text/javascript"></script>
+	<script>onload = loadImages;</script>	
 	<link rel="stylesheet" type="text/css" href="~/Content/Style.css"/>   
 </head>
 <body>		
